name:                quchen-site
version:             1.0.0
synopsis:            Miscellaneous articles written by me (David Luposchainsky aka quchen)
homepage:            https://github.com/quchen/articles
license:             BSD3
license-file:        LICENSE.md
author:              David Luposchainsky
maintainer:          dluposchainsky at googles mail service
build-type:          Simple
cabal-version:       >=1.10

executable hakyll-generate
    main-is:             src/Main.hs
    build-depends:       base >=4.7
                       , hakyll
                       , pandoc
    default-language:    Haskell2010
    ghc-options:         -Wall -Werror
